updated files class names

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,21 @@
 cmake_minimum_required ( VERSION 2.8 )
-project (zenmon)
-set (zenmon_VERSION_MAJOR 0)
-set (zenmon_VERSION_MINOR 1)
+project (proctreemon)
+set (proctreemon_VERSION_MAJOR 0)
+set (proctreemon_VERSION_MINOR 1)
 set (CMAKE_CXX_FLAGS "-O2" )
 
-include_directories( 
+include_directories(
 "${PROJECT_BINARY_DIR}"
 )
 
-add_library( zenmon SHARED 
-  zenmon.cpp
+add_library( proctreemon SHARED
+  proctreemon.cpp
   process.cpp
   common.cpp
   loader.cpp
   cpu.cpp
-)  
-  
-target_link_libraries( zenmon
+)
+
+target_link_libraries( proctreemon
   pthread
 )
